--- a/mysite.css
+++ b/mysite.css
@@ -1,4 +1,7 @@
 
+html {
+    font-size: 16px;
+}
 .title {
     color: white;
     text-align: center;
@@ -49,6 +52,7 @@ header {
     padding: 9px 9px;
     font-family: cursive;
     font-style: bold;
+    height: auto;
 }
 .body{
     width: 100%;
@@ -97,4 +101,9 @@ header {
     font-family: cursive;
     text-align: center;
     clear: left;
+    display: inline-block;
+    position: relative;
+    border: 2px;
+    height: auto;
+    width:250px;
 }
