--- a/mysite.css
+++ b/mysite.css
@@ -46,7 +46,7 @@ header {
     position: relative;
     display: inline-block;
     float: right;
-    width: 250px;
+    width: 100%;
     font-size: 15px;
     background-color: yellow;
     padding: 9px 9px;
@@ -82,6 +82,7 @@ header {
     color: skyblue;
     font-size: 16px;
     clear: both;
+    position: center;
 }
 .grid {
     display: grid;
@@ -105,9 +106,9 @@ header {
     position: relative;
     border: 2px;
     height: auto;
-    width:250px;
+    width:100%;
 }
 
-. {
+.images {
     
-    
+}
