--- a/mysite.css
+++ b/mysite.css
@@ -1,4 +1,3 @@
-
 html {
     font-size: 16px;
 }
@@ -108,7 +107,6 @@ header {
     height: auto;
     width:100%;
 }
-
 .images {
-    
+    position: relative;
 }
